<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="action_settings" translatable="true">Settings</string>
    <string name="action_change_units" translatable="true">Change Units</string>
    <string name="symbol_search" translatable="true">Symbol Search</string>
    <string name="content_test" translatable="true">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="input_prefill" translatable="false"></string>
    <string name="network_toast" translatable="true">Uh-oh! This app requires an internet connection</string>
    <string name="network_toast_detail" translatable="true">No connection, displaying available info</string>
    <string name="no_stock_toast" translatable="true">No stock found</string>
    <string name="no_stock_detail_toast" translatable="true">No stock found for request</string>

    <string name="stock_detail_name" translatable="true">Stock detail</string>
    <string name="no_data_text_description" translatable="true">Please select an option</string>
    <string name="wrong_date" translatable="true">Please make sure starting date is previous to ending date</string>
    <string name="no_date" translatable="true">Please select a starting and an ending date</string>

    <string name="title_stock_widget" translatable="false">StockHawk</string>

    <string name="last_month" translatable="true">Last Month</string>
    <string name="last_year" translatable="true">Last Year</string>
    <string name="custom_date" translatable="true">Custom Date</string>
    <string name="start_date" translatable="true">Start Date</string>
    <string name="end_date" translatable="true">End Date</string>
    <string name="show_graph_for_custom_date" translatable="true">Show graph for custom date</string>
    <string name="historical_title" translatable="true">"Historical for "</string>

    <string name="min_in_period" translatable="true">"Min in period: "</string>
    <string name="max_in_period" translatable="true">"Max in period: "</string>

    <string name="description_add_stock" translatable="true">Add new stock</string>
    <string name="description_select_stock" translatable="true">Click stock for details</string>

    <string name="description_graph" translatable="true">Graph showing the historical stocks</string>
    <string name="description_last_month" translatable="true">Get historical stocks for last month</string>
    <string name="description_last_year" translatable="true">Get historical stocks for last year</string>
    <string name="description_start_date" translatable="true">Select start date</string>
    <string name="description_end_date" translatable="true">Select end dater</string>
    <string name="description_custom_date" translatable="true">Get historical stocks for custom date</string>
    <string name="empty_widget" translatable="true">Please open Stock Hawk with an internet connection</string>
    <string name="stock_already_saved" translatable="true" >This stock is already saved!</string>

</resources>
