<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:columnCount="4"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:columnOrderPreserved="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_in_period"
                android:layout_row="0"
                android:layout_column="0"
                android:id="@+id/min_period" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:id="@+id/min_period_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_in_period"
                android:layout_row="0"
                android:layout_column="2"
                android:id="@+id/max_period" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="3"
                android:id="@+id/max_period_text" />



            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart"
                android:layout_width="0dp"
                android:layout_row="1"
                android:layout_columnSpan="4"
                android:layout_height="256dp"
                android:layout_gravity="fill_horizontal"
                android:layout_column="0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_month"
                android:id="@+id/last_month_button"
                android:layout_columnSpan="2"
                android:layout_column="0"
                android:layout_row="2" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_year"
                android:id="@+id/last_year_button"
                android:layout_columnSpan="2"
                android:layout_column="2"
                android:layout_row="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_date"
                android:id="@+id/customDateText"
                android:layout_column="0"
                android:layout_row="3"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:id="@+id/start_date_button"
                android:layout_column="0"
                android:layout_row="4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:id="@+id/start_date_text"
                android:layout_column="1"
                android:layout_row="4"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:id="@+id/end_date_button"
                android:layout_column="0"
                android:layout_row="5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:id="@+id/end_date_text"
                android:layout_column="1"
                android:layout_row="5"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_graph_for_custom_date"
                android:id="@+id/date_button"
                android:layout_columnSpan="2"
                android:layout_column="0"
                android:layout_row="6"/>




        </GridLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>